--- a/application/views/scripts/index-admin/index.phtml
+++ b/application/views/scripts/index-admin/index.phtml
@@ -41,3 +41,11 @@
         <span class="legenda">Estatísticos</span>
     </a>
 </div>
+
+
+<div class="menu-relatorios">
+    <a class="link-rel" href="<?= $this->url(array("controller" => "estatistica", "action" => "indexbiometrias"), null, true) ?>">
+        <img src="img/bio-icon.png"/><br/>
+        <span class="legenda">Biometrias</span>
+    </a>
+</div>
