--- a/application/views/scripts/barcos/indexrelatorio.phtml
+++ b/application/views/scripts/barcos/indexrelatorio.phtml
@@ -2,6 +2,22 @@
     <h2>Relatórios</h2>
     <h3>Barcos</h3>
 </div>
+<div id="esquerda_base">
+        <form>
+            <label>Buscar entrevistas por Barco: </label>
+            <input class="responsivo" onclick="ajax_busca_barco(this.form, '<?= $this->url(array("controller" => "barcos", "action" => "selectbarcos"), null, true) ?>')" type="button" value="Buscar Entrevistas"/>
+            
+            <select class="responsivo"  name="nome_barco">
+                <?php foreach ($this->barcos as $key => $barco): ?>
+                    <option value="<?= $barco['bar_id']; ?>" ><?= $barco['bar_nome']; ?></option>
+                <?php endforeach; ?>
+            </select>
+            <br/>
+
+        </form>
+    </div>
+
+<?php include('tablebarcos.phtml'); ?>
 
 <h3>Relatórios</h3>
 <ul>
