--- a/application/views/scripts/barcos/tablebarcos.phtml
+++ b/application/views/scripts/barcos/tablebarcos.phtml
@@ -1,22 +1,22 @@
-<div id="espcapturada">
+<div id="tablebarcos">
     <table>
         <tr>
         <th>Arte de Pesca </th>
-        <th>Espécie</th>
-        <th>Quantidade (n)</th>
-        <th>Peso (kg)</th>
-        <th>Preco</th>
-        <th>Número da Entrevista</th>
+        <th>Barco</th>
+        <th>Tipo de Barco</th>
+        <th>Pescador</th>
+        <th>Apelido</th>
+        <th>Porto</th>
         </tr>
 
-        <?php foreach ($this->arrayEspArrasto as $key => $entrevista): ?>
+        <?php foreach ($this->arrayBarArrasto as $key => $entrevista): ?>
             <tr>
             <td>Arrasto de Fundo</td>
-            <td><?= $entrevista['esp_nome_comum'] ?></td>
-            <td><?= $entrevista['spc_quantidade'] ?></td>
-            <td><?= $entrevista['spc_peso_kg'] ?></td>
-            <td><?= $entrevista['spc_preco'] ?></td>
-            <td><?= $entrevista['af_id'] ?></td>
+            <td><?= $entrevista['bar_nome'] ?></td>
+            <td><?= $entrevista['tte_tipoembarcacao'] ?></td>
+            <td><?= $entrevista['tp_nome'] ?></td>
+            <td><?= $entrevista['tp_apelido'] ?></td>
+            <td><?= $entrevista['pto_nome'] ?></td>
             <td class="td-botao">
                         <a href="<?= $this->url(array("controller" => "arrasto-fundo", "action" => "editar", "id" => $entrevista['af_id']), null, true) ?>">
                             <ul id="icons" class="ui-widget ui-helper-clearfix">
@@ -28,14 +28,14 @@
             </tr>
         <?php endforeach; ?>
 
-        <?php foreach ($this->arrayEspCalao as $key => $entrevista): ?>
+        <?php foreach ($this->arrayBarCalao as $key => $entrevista): ?>
             <tr>
             <td>Calão</td>
-            <td><?= $entrevista['esp_nome_comum'] ?></td>
-            <td><?= $entrevista['spc_quantidade'] ?></td>
-            <td><?= $entrevista['spc_peso_kg'] ?></td>
-            <td><?= $entrevista['spc_preco'] ?></td>
-            <td><?= $entrevista['cal_id'] ?></td>
+            <td><?= $entrevista['bar_nome'] ?></td>
+            <td><?= $entrevista['tte_tipoembarcacao'] ?></td>
+            <td><?= $entrevista['tp_nome'] ?></td>
+            <td><?= $entrevista['tp_apelido'] ?></td>
+            <td><?= $entrevista['pto_nome'] ?></td>
             <td class="td-botao">
                 <a href="<?= $this->url(array("controller" => "calao", "action" => "editar", "id" => $entrevista['cal_id']), null, true) ?>">
                     <ul id="icons" class="ui-widget ui-helper-clearfix">
@@ -48,14 +48,14 @@
         <?php endforeach; ?>
 
 
-        <?php foreach ($this->arrayEspColeta as $key => $entrevista): ?>
+        <?php foreach ($this->arrayBarColeta as $key => $entrevista): ?>
             <tr>
             <td>Coleta Manual</td>
-            <td><?= $entrevista['esp_nome_comum'] ?></td>
-            <td><?= $entrevista['spc_quantidade'] ?></td>
-            <td><?= $entrevista['spc_peso_kg'] ?></td>
-            <td><?= $entrevista['spc_preco'] ?></td>
-            <td><?= $entrevista['cml_id'] ?></td>
+            <td><?= $entrevista['bar_nome'] ?></td>
+            <td><?= $entrevista['tte_tipoembarcacao'] ?></td>
+            <td><?= $entrevista['tp_nome'] ?></td>
+            <td><?= $entrevista['tp_apelido'] ?></td>
+            <td><?= $entrevista['pto_nome'] ?></td>
             <td class="td-botao">
                 <a href="<?= $this->url(array("controller" => "coleta-manual", "action" => "editar", "id" => $entrevista['cml_id']), null, true) ?>">
                     <ul id="icons" class="ui-widget ui-helper-clearfix">
@@ -67,14 +67,14 @@
             </tr>
         <?php endforeach; ?>
 
-        <?php foreach ($this->arrayEspEmalhe as $key => $entrevista): ?>
+        <?php foreach ($this->arrayBarEmalhe as $key => $entrevista): ?>
             <tr>
             <td>Emalhe</td>
-            <td><?= $entrevista['esp_nome_comum'] ?></td>
-            <td><?= $entrevista['spc_quantidade'] ?></td>
-            <td><?= $entrevista['spc_peso_kg'] ?></td>
-            <td><?= $entrevista['spc_preco'] ?></td>
-            <td><?= $entrevista['em_id'] ?></td>
+            <td><?= $entrevista['bar_nome'] ?></td>
+            <td><?= $entrevista['tte_tipoembarcacao'] ?></td>
+            <td><?= $entrevista['tp_nome'] ?></td>
+            <td><?= $entrevista['tp_apelido'] ?></td>
+            <td><?= $entrevista['pto_nome'] ?></td>
             <td class="td-botao">
                 <a href="<?= $this->url(array("controller" => "emalhe", "action" => "editar", "id" => $entrevista['em_id']), null, true) ?>">
                     <ul id="icons" class="ui-widget ui-helper-clearfix">
@@ -86,14 +86,14 @@
             </tr>
         <?php endforeach; ?>
 
-        <?php foreach ($this->arrayEspGrosseira as $key => $entrevista): ?>
+        <?php foreach ($this->arrayBarGrosseira as $key => $entrevista): ?>
             <tr>
             <td>Groseira/Espinhel</td>
-            <td><?= $entrevista['esp_nome_comum'] ?></td>
-            <td><?= $entrevista['spc_quantidade'] ?></td>
-            <td><?= $entrevista['spc_peso_kg'] ?></td>
-            <td><?= $entrevista['spc_preco'] ?></td>
-            <td><?= $entrevista['grs_id'] ?></td>
+            <td><?= $entrevista['bar_nome'] ?></td>
+            <td><?= $entrevista['tte_tipoembarcacao'] ?></td>
+            <td><?= $entrevista['tp_nome'] ?></td>
+            <td><?= $entrevista['tp_apelido'] ?></td>
+            <td><?= $entrevista['pto_nome'] ?></td>
             <td class="td-botao">
                 <a href="<?= $this->url(array("controller" => "grosseira", "action" => "editar", "id" => $entrevista['grs_id']), null, true) ?>">
                     <ul id="icons" class="ui-widget ui-helper-clearfix">
@@ -105,14 +105,14 @@
             </tr>
         <?php endforeach; ?>
 
-        <?php foreach ($this->arrayEspJerere as $key => $entrevista): ?>
+        <?php foreach ($this->arrayBarJerere as $key => $entrevista): ?>
             <tr>
             <td>Jereré</td>
-            <td><?= $entrevista['esp_nome_comum'] ?></td>
-            <td><?= $entrevista['spc_quantidade'] ?></td>
-            <td><?= $entrevista['spc_peso_kg'] ?></td>
-            <td><?= $entrevista['spc_preco'] ?></td>
-            <td><?= $entrevista['jre_id'] ?></td>
+            <td><?= $entrevista['bar_nome'] ?></td>
+            <td><?= $entrevista['tte_tipoembarcacao'] ?></td>
+            <td><?= $entrevista['tp_nome'] ?></td>
+            <td><?= $entrevista['tp_apelido'] ?></td>
+            <td><?= $entrevista['pto_nome'] ?></td>
             <td class="td-botao">
                 <a href="<?= $this->url(array("controller" => "jerere", "action" => "editar", "id" => $entrevista['jre_id']), null, true) ?>">
                     <ul id="icons" class="ui-widget ui-helper-clearfix">
@@ -124,14 +124,14 @@
             </tr>
         <?php endforeach; ?>
 
-        <?php foreach ($this->arrayEspLinha as $key => $entrevista): ?>
+        <?php foreach ($this->arrayBarLinha as $key => $entrevista): ?>
             <tr>
             <td>Pesca de Linha</td>
-            <td><?= $entrevista['esp_nome_comum'] ?></td>
-            <td><?= $entrevista['spc_quantidade'] ?></td>
-            <td><?= $entrevista['spc_peso_kg'] ?></td>
-            <td><?= $entrevista['spc_preco'] ?></td>
-            <td><?= $entrevista['lin_id'] ?></td>
+            <td><?= $entrevista['bar_nome'] ?></td>
+            <td><?= $entrevista['tte_tipoembarcacao'] ?></td>
+            <td><?= $entrevista['tp_nome'] ?></td>
+            <td><?= $entrevista['tp_apelido'] ?></td>
+            <td><?= $entrevista['pto_nome'] ?></td>
             <td class="td-botao">
                 <a href="<?= $this->url(array("controller" => "linha", "action" => "editar", "id" => $entrevista['lin_id']), null, true) ?>">
                     <ul id="icons" class="ui-widget ui-helper-clearfix">
@@ -143,14 +143,14 @@
             </tr>
         <?php endforeach; ?>
 
-        <?php foreach ($this->arrayEspLinhaFundo as $key => $entrevista): ?>
+        <?php foreach ($this->arrayBarLinhaFundo as $key => $entrevista): ?>
             <tr>
             <td>Linha de Fundo</td>
-            <td><?= $entrevista['esp_nome_comum'] ?></td>
-            <td><?= $entrevista['spc_quantidade'] ?></td>
-            <td><?= $entrevista['spc_peso_kg'] ?></td>
-            <td><?= $entrevista['spc_preco'] ?></td>
-            <td><?= $entrevista['lf_id'] ?></td>
+            <td><?= $entrevista['bar_nome'] ?></td>
+            <td><?= $entrevista['tte_tipoembarcacao'] ?></td>
+            <td><?= $entrevista['tp_nome'] ?></td>
+            <td><?= $entrevista['tp_apelido'] ?></td>
+            <td><?= $entrevista['pto_nome'] ?></td>
             <td class="td-botao">
                 <a href="<?= $this->url(array("controller" => "linha-fundo", "action" => "editar", "id" => $entrevista['lf_id']), null, true) ?>">
                     <ul id="icons" class="ui-widget ui-helper-clearfix">
@@ -162,14 +162,14 @@
             </tr>
         <?php endforeach; ?>
 
-        <?php foreach ($this->arrayEspManzua as $key => $entrevista): ?>
+        <?php foreach ($this->arrayBarManzua as $key => $entrevista): ?>
             <tr>
             <td>Manzua</td>
-            <td><?= $entrevista['esp_nome_comum'] ?></td>
-            <td><?= $entrevista['spc_quantidade'] ?></td>
-            <td><?= $entrevista['spc_peso_kg'] ?></td>
-            <td><?= $entrevista['spc_preco'] ?></td>
-            <td><?= $entrevista['man_id'] ?></td>
+            <td><?= $entrevista['bar_nome'] ?></td>
+            <td><?= $entrevista['tte_tipoembarcacao'] ?></td>
+            <td><?= $entrevista['tp_nome'] ?></td>
+            <td><?= $entrevista['tp_apelido'] ?></td>
+            <td><?= $entrevista['pto_nome'] ?></td>
             <td class="td-botao">
                 <a href="<?= $this->url(array("controller" => "manzua", "action" => "editar", "id" => $entrevista['man_id']), null, true) ?>">
                     <ul id="icons" class="ui-widget ui-helper-clearfix">
@@ -182,14 +182,14 @@
         <?php endforeach; ?>
 
 
-        <?php foreach ($this->arrayEspMergulho as $key => $entrevista): ?>
+        <?php foreach ($this->arrayBarMergulho as $key => $entrevista): ?>
             <tr>
             <td>Mergulho</td>
-            <td><?= $entrevista['esp_nome_comum'] ?></td>
-            <td><?= $entrevista['spc_quantidade'] ?></td>
-            <td><?= $entrevista['spc_peso_kg'] ?></td>
-            <td><?= $entrevista['spc_preco'] ?></td>
-            <td><?= $entrevista['mer_id'] ?></td>
+            <td><?= $entrevista['bar_nome'] ?></td>
+            <td><?= $entrevista['tte_tipoembarcacao'] ?></td>
+            <td><?= $entrevista['tp_nome'] ?></td>
+            <td><?= $entrevista['tp_apelido'] ?></td>
+            <td><?= $entrevista['pto_nome'] ?></td>
             <td class="td-botao">
                 <a href="<?= $this->url(array("controller" => "mergulho", "action" => "editar", "id" => $entrevista['mer_id']), null, true) ?>">
                     <ul id="icons" class="ui-widget ui-helper-clearfix">
@@ -201,14 +201,14 @@
             </tr>
         <?php endforeach; ?>
 
-        <?php foreach ($this->arrayEspRatoeira as $key => $entrevista): ?>
+        <?php foreach ($this->arrayBarRatoeira as $key => $entrevista): ?>
             <tr>
             <td>Ratoeira</td>
-            <td><?= $entrevista['esp_nome_comum'] ?></td>
-            <td><?= $entrevista['spc_quantidade'] ?></td>
-            <td><?= $entrevista['spc_peso_kg'] ?></td>
-            <td><?= $entrevista['spc_preco'] ?></td>
-            <td><?= $entrevista['rat_id'] ?></td>
+            <td><?= $entrevista['bar_nome'] ?></td>
+            <td><?= $entrevista['tte_tipoembarcacao'] ?></td>
+            <td><?= $entrevista['tp_nome'] ?></td>
+            <td><?= $entrevista['tp_apelido'] ?></td>
+            <td><?= $entrevista['pto_nome'] ?></td>
             <td class="td-botao">
                 <a href="<?= $this->url(array("controller" => "ratoeira", "action" => "editar", "id" => $entrevista['rat_id']), null, true) ?>">
                     <ul id="icons" class="ui-widget ui-helper-clearfix">
@@ -221,14 +221,14 @@
         <?php endforeach; ?>
 
 
-        <?php foreach ($this->arrayEspSiripoia as $key => $entrevista): ?>
+        <?php foreach ($this->arrayBarSiripoia as $key => $entrevista): ?>
             <tr>
             <td>Siripoia</td>
-            <td><?= $entrevista['esp_nome_comum'] ?></td>
-            <td><?= $entrevista['spc_quantidade'] ?></td>
-            <td><?= $entrevista['spc_peso_kg'] ?></td>
-            <td><?= $entrevista['spc_preco'] ?></td>
-            <td><?= $entrevista['sir_id'] ?></td>
+            <td><?= $entrevista['bar_nome'] ?></td>
+            <td><?= $entrevista['tte_tipoembarcacao'] ?></td>
+            <td><?= $entrevista['tp_nome'] ?></td>
+            <td><?= $entrevista['tp_apelido'] ?></td>
+            <td><?= $entrevista['pto_nome'] ?></td>
             <td class="td-botao">
                 <a href="<?= $this->url(array("controller" => "siripoia", "action" => "editar", "id" => $entrevista['sir_id']), null, true) ?>">
                     <ul id="icons" class="ui-widget ui-helper-clearfix">
@@ -240,14 +240,14 @@
             </tr>
         <?php endforeach; ?>
 
-        <?php foreach ($this->arrayEspTarrafa as $key => $entrevista): ?>
+        <?php foreach ($this->arrayBarTarrafa as $key => $entrevista): ?>
             <tr>
             <td>Tarrafa</td>
-            <td><?= $entrevista['esp_nome_comum'] ?></td>
-            <td><?= $entrevista['spc_quantidade'] ?></td>
-            <td><?= $entrevista['spc_peso_kg'] ?></td>
-            <td><?= $entrevista['spc_preco'] ?></td>
-            <td><?= $entrevista['tar_id'] ?></td>
+            <td><?= $entrevista['bar_nome'] ?></td>
+            <td><?= $entrevista['tte_tipoembarcacao'] ?></td>
+            <td><?= $entrevista['tp_nome'] ?></td>
+            <td><?= $entrevista['tp_apelido'] ?></td>
+            <td><?= $entrevista['pto_nome'] ?></td>
             <td class="td-botao">
                 <a href="<?= $this->url(array("controller" => "tarrafa", "action" => "editar", "id" => $entrevista['tar_id']), null, true) ?>">
                     <ul id="icons" class="ui-widget ui-helper-clearfix">
@@ -259,14 +259,14 @@
             </tr>
         <?php endforeach; ?>
 
-        <?php foreach ($this->arrayEspVaraPesca as $key => $entrevista): ?>
+        <?php foreach ($this->arrayBarVaraPesca as $key => $entrevista): ?>
             <tr>
             <td>Vara de Pesca</td>
-            <td><?= $entrevista['esp_nome_comum'] ?></td>
-            <td><?= $entrevista['spc_quantidade'] ?></td>
-            <td><?= $entrevista['spc_peso_kg'] ?></td>
-            <td><?= $entrevista['spc_preco'] ?></td>
-            <td><?= $entrevista['vp_id'] ?></td>
+            <td><?= $entrevista['bar_nome'] ?></td>
+            <td><?= $entrevista['tte_tipoembarcacao'] ?></td>
+            <td><?= $entrevista['tp_nome'] ?></td>
+            <td><?= $entrevista['tp_apelido'] ?></td>
+            <td><?= $entrevista['pto_nome'] ?></td>
             <td class="td-botao">
                 <a href="<?= $this->url(array("controller" => "vara-pesca", "action" => "editar", "id" => $entrevista['vp_id']), null, true) ?>">
                     <ul id="icons" class="ui-widget ui-helper-clearfix">
