Unidade de Medida Biometria

--- a/application/views/scripts/arrasto-fundo/editar.phtml
+++ b/application/views/scripts/arrasto-fundo/editar.phtml
@@ -193,7 +193,7 @@
                     <?php endforeach; ?>
                 </select>
                 <input class="responsivo" style="float:left;" type="text" name="quantidade" placeholder="Quantidade" size="10px">
-                <input class="responsivo" style="float:left;" type="text" name="peso" placeholder="Peso" size="10px">
+                <input class="responsivo" style="float:left;" type="text" name="peso" placeholder="Peso (g)" size="10px">
                 <input class="responsivo" style="float:left;" type="text" name="precokg" placeholder="Preço" size="10px">
 
                 <input type="hidden" name="id_entrevista"  value="<?= $this->entrevista['af_id'] ?>"/>
@@ -236,7 +236,7 @@
                         <option value="<?= $especie['esp_id']; ?>"><?= $especie['esp_nome_comum']; ?></option>
                     <?php endforeach; ?>
                 </select>
-                <input class="responsivo" style="float:left;" type="text" name="comprimentoPeixe" placeholder="Comprimento" size="10px">
+                <input class="responsivo" style="float:left;" type="text" name="comprimentoPeixe" placeholder="Comprimento (cm)" size="10px">
 
                 <select class="responsivo" style="float:left;" class="amostragem" name="SelectSexoPeixe" style="width:5px">
                     <option value=""></option>
@@ -245,7 +245,7 @@
                     <option value="I">Indefinido</option>
                 </select>
                 
-                <input class="responsivo" style="float:left;" type="text" name="pesoPeixe" placeholder="Peso" size="10px">
+                <input class="responsivo" style="float:left;" type="text" name="pesoPeixe" placeholder="Peso (g)" size="10px">
 
                 
             </div>
@@ -280,9 +280,9 @@
                     <?php endforeach; ?>
                 </select>
                 
-                <input class="responsivo" style="float:left;" type="text" name="comprimentoCabeca" placeholder="Comp. Carapaça" size="10px">
+                <input class="responsivo" style="float:left;" type="text" name="comprimentoCabeca" placeholder="Comp. Carapaça (mm)" size="10px">
 
-                <input class="responsivo" style="float:left;" type="text" name="pesoCamarao" placeholder="Peso" size="10px">
+                <input class="responsivo" style="float:left;" type="text" name="pesoCamarao" placeholder="Peso (g)" size="10px">
 
 
             </div>
