--- a/application/views/scripts/jerere/editar.phtml
+++ b/application/views/scripts/jerere/editar.phtml
@@ -253,7 +253,7 @@
                         <option value="<?= $especie['esp_id']; ?>"><?= $especie['esp_nome_comum']; ?></option>
                     <?php endforeach; ?>
                 </select>
-                <input class="responsivo" style="float:left;" type="text" name="comprimentoPeixe" placeholder="Comprimento" size="10px">
+                <input class="responsivo" style="float:left;" type="text" name="comprimentoPeixe" placeholder="Comprimento (cm)" size="10px">
 
                 <select class="responsivo" style="float:left;" class="amostragem" name="SelectSexoPeixe" style="width:5px">
                     <option value="M">Macho</option>
@@ -261,7 +261,7 @@
                     <option value="I">Indefinido</option>
                 </select>
                 
-                <input class="responsivo" style="float:left;" type="text" name="pesoPeixe" placeholder="Peso" size="10px">
+                <input class="responsivo" style="float:left;" type="text" name="pesoPeixe" placeholder="Peso (g)" size="10px">
             </div>
         </fieldset>
         <br>
@@ -291,9 +291,9 @@
                     <?php endforeach; ?>
                 </select>
                 
-                <input class="responsivo" style="float:left;" type="text" name="comprimentoCabeca" placeholder="Comp. Carapaça" size="10px">
+                <input class="responsivo" style="float:left;" type="text" name="comprimentoCabeca" placeholder="Comp. Carapaça (mm)" size="10px">
 
-                <input class="responsivo" style="float:left;" type="text" name="pesoCamarao" placeholder="Peso" size="10px">
+                <input class="responsivo" style="float:left;" type="text" name="pesoCamarao" placeholder="Peso (g)" size="10px">
             </div>
         </fieldset>
         <br>
