Medias das especies

--- a/application/views/scripts/barcos/indexrelatorio.phtml
+++ b/application/views/scripts/barcos/indexrelatorio.phtml
@@ -2,6 +2,8 @@
     <h2>Relatórios</h2>
     <h3>Barcos</h3>
 </div>
+
+     <a href="<?= $this->url(array("controller" => "index-admin", "action" => "index"), null, true) ?>" id="botao-ancora">Voltar</a><br/><br/>  
 <div id="esquerda_base">
         <form>
             <label>Buscar entrevistas por Barco: </label>
