--- a/application/views/scripts/especie/indexrelatorio.phtml
+++ b/application/views/scripts/especie/indexrelatorio.phtml
@@ -3,7 +3,7 @@
         <h2>Relatórios</h2>
         <h3>Espécies</h3>
     </div>
-
+     <a href="<?= $this->url(array("controller" => "index-admin", "action" => "index"), null, true) ?>" id="botao-ancora">Voltar</a><br/><br/>
     <div id="esquerda_base">
         <form>
             <label>Buscar entrevistas por Espécie: </label>
