--- a/application/views/scripts/estatistica/barco.phtml
+++ b/application/views/scripts/estatistica/barco.phtml
@@ -1,5 +1,7 @@
 <h2>Relatórios Estatísticos - Embarcações Cadastrados</h2>
 
+ <a href="<?= $this->url(array("controller" => "estatistica", "action" => "index"), null, true) ?>" id="botao-ancora">Voltar</a><br/><br/>
+
 <script src="js/Chart.min.js"></script>
 <p> Quantidade total de Embarcações cadastradas: <b><?=$this->quantBarcos ?></b> </p>
 <p> Quantidade total de Embarcações caracterizadas: <b><?=$this->quantEmbarcacoes ?></b> </p>
