--- a/application/views/scripts/estatistica/entrevista.phtml
+++ b/application/views/scripts/estatistica/entrevista.phtml
@@ -1,5 +1,7 @@
 <h2>Relatórios Estatísticos - Entrevistas Realizadas</h2>
 
+<a href="<?= $this->url(array("controller" => "estatistica", "action" => "index"), null, true) ?>" id="botao-ancora">Voltar</a><br/><br/>
+
 <script src="js/Chart.min.js"></script>
 <p> Quantidade total de Entrevistas Realizadas: <b><?=$this->totalEntrevistas ?></b> </p>
 
