--- a/application/views/scripts/estatistica/pescador.phtml
+++ b/application/views/scripts/estatistica/pescador.phtml
@@ -1,5 +1,7 @@
 <h2>Relatórios Estatísticos - Pescadores Cadastrados</h2>
 
+<a href="<?= $this->url(array("controller" => "estatistica", "action" => "index"), null, true) ?>" id="botao-ancora">Voltar</a><br/><br/>
+
 <script src="js/Chart.min.js"></script>
 <p> Quantidade total de Pescadores cadastrados: <b><?=$this->quantPescadores ?></b> </p>
 <script type="text/javascript">
