--- a/application/views/scripts/estatistica/unidadecaptura.phtml
+++ b/application/views/scripts/estatistica/unidadecaptura.phtml
@@ -1,5 +1,7 @@
 <h2>Relatórios Estatísticos - Unidades de Captura</h2>
 
+<a href="<?= $this->url(array("controller" => "estatistica", "action" => "index"), null, true) ?>" id="botao-ancora">Voltar</a><br/><br/>
+
 <script src="js/Chart.min.js"></script>
 
 <script type="text/javascript">
