--- a/application/views/scripts/pescador/relatorio.phtml
+++ b/application/views/scripts/pescador/relatorio.phtml
@@ -2,7 +2,7 @@
     <h2>Relatórios</h2>
     <h3>Pescadores</h3>
 </div>
-
+ <a href="<?= $this->url(array("controller" => "index-admin", "action" => "index"), null, true) ?>" id="botao-ancora">Voltar</a><br/><br/>
 <fieldset>
     <legend>Dados do pescador</legend>
         <ul class="pescador">
