--- a/application/views/scripts/porto/relatorioindex.phtml
+++ b/application/views/scripts/porto/relatorioindex.phtml
@@ -1,5 +1,8 @@
-<h3>Relatórios -> Portos:</h3>
-
+<div id="titulos">
+    <h2>Relatórios</h2>
+    <h3>Portos</h3>
+</div>
+     <a href="<?= $this->url(array("controller" => "index-admin", "action" => "index"), null, true) ?>" id="botao-ancora">Voltar</a><br/><br/>
 <form action="<?= $this->url(array("controller" => "porto", "action" => "relatorioindex"), null, true) ?>" method="post">
     <div class="esquerda">
 
