--- a/application/views/scripts/relatorios/index.phtml
+++ b/application/views/scripts/relatorios/index.phtml
@@ -9,6 +9,8 @@
 <div id="titulos">
     <h2>Relatórios</h2>
 </div>
+
+     <a href="<?= $this->url(array("controller" => "index-admin", "action" => "index"), null, true) ?>" id="botao-ancora">Voltar</a><br/><br/>
 <form action="<?= $this->url(array("controller" => "relatorios", "action" => "gerar"), null, true) ?>" target="_blank" method="post">
     <div class="esquerda">
     <fieldset>
